Liquid Graph fix. Key navigation fix. Addresses overflow fix. Firefox float fix.

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -48,9 +48,6 @@ body {
   min-height: 1px;
   padding: 1.25rem;
   position: relative;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   min-width: 0;
   word-wrap: break-word;
   background-color: #24273e;
